--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
   <script src="js/random.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/modal.js"></script>
+  <script src="js/sizer.js"></script>
   <script src="js/data.js"></script>
   <script src="js/mini-picture.js"></script>
   <script src="js/gallery.js"></script>
