Добавляет модуль для работы с сервером. Загружает данные для галереи

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
   </template>
 
   <script src="js/random.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/sizer.js"></script>
