--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
   <script src="js/random.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/utils.js"></script>
+  <script src="js/message.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/sizer.js"></script>
   <script src="js/slider.js"></script>
