--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
   <script src="js/sizer.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/mini-picture.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
