--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 
   <script src="js/random.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/message.js"></script>
   <script src="js/modal.js"></script>
