--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
   <script src="js/filter.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
+  <script src="js/validation.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
